--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <h1>Welcome to Index PAGE!</h1>
-
+<br>
+<div class="container">
+    <a href="/login">Login</a>
+</div>
 
 </body>
 </html>
