--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <title>Admin Panel</title>
   <style>
@@ -190,8 +188,8 @@
                         <input type="password" class="form-control" id="password" name="password">
                       </div>
                       <div class="select">
-                        <label for="roles" class="col-form-label form-label">Roles:</label>
-                        <select class="form-select form-control" size="2" multiple aria-label="size 3 select example" id="roles" name="roles"></select>
+                        <label for="editRoles" class="col-form-label form-label">Roles:</label>
+                        <select class="form-select form-control" size="2" multiple aria-label="size 3 select example" id="editRoles" name="editRoles"></select>
                       </div>
                     </div>
                     <div class="modal-footer">
@@ -232,10 +230,6 @@
                         <label for="deleteEmail" class="col-form-label form-label">Email:</label>
                         <input type="email" class="form-control" id="deleteEmail" disabled>
                       </div>
-                      <div class="mb-3">
-                        <label for="deletePassword" class="col-form-label form-label">Password:</label>
-                        <input type="password" class="form-control" id="deletePassword" disabled>
-                      </div>
                       <div class="select">
                         <label for="deleteRoles" class="col-form-label form-label">Roles:</label>
                         <select class="form-select form-control" size="2" multiple aria-label="size 3 select example" id="deleteRoles" disabled></select>
@@ -262,23 +256,23 @@
               <form id="newUserForm">
                 <div class="mb-3">
                   <label for="deleteFirstName" class="col-form-label form-label">First name:</label>
-                  <input class="form-control" id="newFirstName" name="firstName">
+                  <input class="form-control" id="newFirstName" name="firstName" placeholder="First name">
                 </div>
                 <div class="mb-3">
                   <label for="deleteLastName" class="col-form-label form-label">Last name:</label>
-                  <input type="text" class="form-control" id="newLastName" name="lastName">
+                  <input type="text" class="form-control" id="newLastName" name="lastName" placeholder="Last name">
                 </div>
                 <div class="mb-3">
                   <label for="deleteAge" class="col-form-label form-label">Age:</label>
-                  <input type="number" class="form-control" id="newAge" name="age">
+                  <input type="number" class="form-control" id="newAge" name="age" placeholder="Age">
                 </div>
                 <div class="mb-3">
                   <label for="deleteEmail" class="col-form-label form-label">Email:</label>
-                  <input type="email" class="form-control" id="newEmail" name="email">
+                  <input type="email" class="form-control" id="newEmail" name="email" placeholder="Email">
                 </div>
                 <div class="mb-3">
-                  <label for="deletePassword" class="col-form-label form-label">Password:</label>
-                  <input type="password" class="form-control" id="newPassword" name="password">
+                  <label for="newPassword" class="col-form-label form-label">Password:</label>
+                  <input type="password" class="form-control" id="newPassword" name="password" placeholder="Password">
                 </div>
                 <div class="select">
                   <label for="deleteRoles" class="col-form-label form-label">Roles:</label>
@@ -323,13 +317,11 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="edit.js"></script>
-<script type="text/javascript" src="delete.js"></script>
-<script type="text/javascript" src="new.js"></script>
 <script type="text/javascript" src="user.js"></script>
 </body>
 </html>
