--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -322,6 +322,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="edit.js"></script>
-<script type="text/javascript" src="user.js"></script>
+<script type="text/javascript" src="admin-fill-nav.js"></script>
 </body>
 </html>
